--- a/O-B-Dometer/Base.lproj/Main.storyboard
+++ b/O-B-Dometer/Base.lproj/Main.storyboard
@@ -1,24 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GoZ-m3-pKs">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Map view configurations" minToolsVersion="14.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Map-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="O_B_Dometer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T1S-wF-nof">
+                                <rect key="frame" x="16" y="59" width="361" height="574"/>
+                                <standardMapConfiguration key="preferredConfiguration"/>
+                            </mapView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wh0-KQ-J7P">
+                                <rect key="frame" x="16" y="641" width="361" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="4Mi-Zc-lXS"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="wh0-KQ-J7P" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="834-PK-Q5c"/>
+                            <constraint firstItem="wh0-KQ-J7P" firstAttribute="top" secondItem="T1S-wF-nof" secondAttribute="bottom" constant="8" id="NMV-3s-SMR"/>
+                            <constraint firstItem="T1S-wF-nof" firstAttribute="trailing" secondItem="wh0-KQ-J7P" secondAttribute="trailing" id="Tij-hR-ocw"/>
+                            <constraint firstItem="T1S-wF-nof" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="YuL-UP-lwq"/>
+                            <constraint firstItem="T1S-wF-nof" firstAttribute="leading" secondItem="wh0-KQ-J7P" secondAttribute="leading" id="wfT-U0-L5o"/>
+                            <constraint firstItem="T1S-wF-nof" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zuK-9G-sqY"/>
+                            <constraint firstItem="T1S-wF-nof" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="zyb-bR-SVi"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Map" image="map.fill" catalog="system" id="Nqb-iE-AfR"/>
+                    <connections>
+                        <outlet property="mapView" destination="T1S-wF-nof" id="hry-4h-1Xr"/>
+                        <outlet property="testText" destination="wh0-KQ-J7P" id="KfC-lu-IoN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="760" y="-290"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="82w-Mc-Gff">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="GoZ-m3-pKs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="57N-2k-pCh">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="KgM-yv-90J"/>
+                        <segue destination="INl-fx-RlS" kind="relationship" relationship="viewControllers" id="LhA-U1-YMo"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oIZ-FO-yBc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="17.557251908396946" y="-2.1126760563380285"/>
+        </scene>
+        <!--View Data-->
+        <scene sceneID="GJc-h6-5yw">
+            <objects>
+                <viewController id="INl-fx-RlS" customClass="TableController" customModule="O_B_Dometer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cch-8o-0QE">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TQI-PQ-RaO">
+                                <rect key="frame" x="0.0" y="59" width="393" height="651"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="VHw-rF-cbS"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="TQI-PQ-RaO" firstAttribute="top" secondItem="VHw-rF-cbS" secondAttribute="top" id="FkP-7P-22W"/>
+                            <constraint firstItem="VHw-rF-cbS" firstAttribute="bottom" secondItem="TQI-PQ-RaO" secondAttribute="bottom" constant="59" id="I28-xY-fz0"/>
+                            <constraint firstItem="TQI-PQ-RaO" firstAttribute="leading" secondItem="VHw-rF-cbS" secondAttribute="leading" id="Q4W-US-RXv"/>
+                            <constraint firstItem="TQI-PQ-RaO" firstAttribute="centerX" secondItem="cch-8o-0QE" secondAttribute="centerX" id="hvC-8J-HZ8"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="View Data" image="list.bullet.rectangle.fill" catalog="system" id="gJA-Wp-mKZ"/>
+                    <connections>
+                        <outlet property="tableData" destination="TQI-PQ-RaO" id="5Gw-bx-tZS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="421-Sl-f3g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="759.5419847328244" y="354.92957746478874"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="list.bullet.rectangle.fill" catalog="system" width="128" height="93"/>
+        <image name="map.fill" catalog="system" width="128" height="110"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
