Moved uid to shared Appdelegate to enable segue to tabBarController

--- a/O-B-Dometer/Base.lproj/Main.storyboard
+++ b/O-B-Dometer/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Obf-as-unI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Obf-as-unI">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Map view configurations" minToolsVersion="14.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -14,15 +15,15 @@
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="ViewController" customModule="O_B_Dometer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T1S-wF-nof">
-                                <rect key="frame" x="16" y="59" width="361" height="623"/>
+                                <rect key="frame" x="16" y="0.0" width="361" height="657"/>
                                 <standardMapConfiguration key="preferredConfiguration"/>
                             </mapView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wh0-KQ-J7P">
-                                <rect key="frame" x="16" y="690" width="361" height="128"/>
+                                <rect key="frame" x="16" y="665" width="361" height="128"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="4Mi-Zc-lXS"/>
@@ -158,7 +159,7 @@
                         <outlet property="emailField" destination="4r1-wA-zQ5" id="DOo-zC-59X"/>
                         <outlet property="invalidLabel" destination="1eP-gc-5N8" id="Xks-vG-SGA"/>
                         <outlet property="passField" destination="hMs-nj-RwZ" id="nf1-9n-Img"/>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="go" id="zpP-Ad-fmA"/>
+                        <segue destination="GoZ-m3-pKs" kind="show" identifier="go" id="mUh-kY-Xvr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wNz-wd-ydO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -190,11 +191,11 @@
             <objects>
                 <viewController id="INl-fx-RlS" customClass="TableController" customModule="O_B_Dometer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cch-8o-0QE">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TQI-PQ-RaO">
-                                <rect key="frame" x="0.0" y="59" width="393" height="651"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="734"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -217,9 +218,6 @@
             <point key="canvasLocation" x="759.5419847328244" y="354.92957746478874"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="zpP-Ad-fmA"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <image name="list.bullet.rectangle.fill" catalog="system" width="128" height="93"/>
         <image name="map.fill" catalog="system" width="128" height="110"/>
